--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/images/circleLogo.svg"
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alice&family=Alike&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
     />
     <meta
       name="viewport"
@@ -13,7 +21,7 @@
     />
     <title>Rice Thief</title>
   </head>
-  <body>
+  <body class="min-h-screen bg-brand-bg">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
